--- a/Week_14/files_homework/src/main/resources/application.properties
+++ b/Week_14/files_homework/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Datasource and Postgres settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/files_and_folders
-spring.datasource.username=claire
+spring.datasource.username=Claire
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
