Moved folders to correct location and added repo and test

--- a/Week_14/courses_service/src/main/resources/application.properties
+++ b/Week_14/courses_service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Datasource and Postgres settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/coursesservice
+spring.datasource.url=jdbc:postgresql://localhost:5432/courses_service
 spring.datasource.username=Claire
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
